<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeScreenActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Home"
            app:menu="@menu/top_app_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"/>

    </com.google.android.material.appbar.AppBarLayout>


    <!-- First card view (STOCK) -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_stock"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:cardElevation="50dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp">
            
            <LinearLayout
                android:id="@+id/ll_stock"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:src="@drawable/stock"
                    android:scaleType="centerCrop"/>

                <com.example.salesrep.utils.SRPTextViewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stock"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <!-- Second card view (SHOPS) -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="205dp"
        android:layout_marginTop="150dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_shops"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:cardElevation="50dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:id="@+id/ll_shop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:src="@drawable/shops"
                    android:scaleType="centerCrop"/>

                <com.example.salesrep.utils.SRPTextViewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shops"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <!-- Third card view (ROUTES)-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="420dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_routes"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:cardElevation="50dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:id="@+id/ll_route"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:src="@drawable/routes"
                    android:scaleType="centerCrop"/>

                <com.example.salesrep.utils.SRPTextViewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/routes"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>



    <!-- Fourth card view (History) -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="205dp"
        android:layout_marginTop="420dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_history"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:cardElevation="50dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:id="@+id/ll_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:src="@drawable/history"
                    android:scaleType="centerCrop"/>

                <com.example.salesrep.utils.SRPTextViewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>