<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SignupActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_signup_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            tools:ignore="MissingConstraints">

            <com.example.salesrep.utils.SRPTextViewBold
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:paddingStart="-25dp"
                android:paddingEnd="0dp"
                android:text="@string/create_account"
                android:textColor="@color/black"
                android:textSize="18sp"/>


        </androidx.appcompat.widget.Toolbar>


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar_signup_activity">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="16dp"
                        android:hint="First Name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:textColorHint="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_fname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:padding="16dp"
                            android:textColor="@color/black"
                            android:textSize="16sp"/>


                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="16dp"
                        android:hint="Last Name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:textColorHint="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/til_first_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_lname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:padding="16dp"
                            android:textColor="@color/black"
                            android:textSize="16sp"/>


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="16dp"
                        android:hint="Email"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:textColorHint="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/til_last_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:padding="16dp"
                            android:textColor="@color/black"
                            android:textSize="16sp"/>


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="16dp"
                        android:hint="Password"
                        app:passwordToggleEnabled="true"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:textColorHint="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/til_email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:padding="16dp"
                            android:textColor="@color/black"
                            android:textSize="16sp"/>


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="16dp"
                        android:hint="Confirm Password"
                        app:passwordToggleEnabled="true"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:textColorHint="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/til_password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:padding="16dp"
                            android:textColor="@color/black"
                            android:textSize="16sp"/>


                    </com.google.android.material.textfield.TextInputLayout>


                    <LinearLayout
                        android:id="@+id/ll_terms_and_conditions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/til_confirm_password">
                        
                        
                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/cb_terms_and_conditions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"/>

                        <com.example.salesrep.utils.SRPTextView
                            android:id="@+id/tv_terms_and_conditions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:textSize="14sp"
                            android:text="@string/agree"
                            android:textColor="@color/black"/>


                    </LinearLayout>


                    <com.example.salesrep.utils.SRPButton
                        android:id="@+id/btn_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/button_background"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="SignUp"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ll_terms_and_conditions" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="25dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_signup">

                        <com.example.salesrep.utils.SRPTextView
                            android:id="@+id/tv_hv_account"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:text="@string/have_account"
                            android:textColor="@color/secondary_text" />

                        <com.example.salesrep.utils.SRPTextViewBold
                            android:id="@+id/tv_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:text="@string/login"
                            android:textColor="@color/secondary_text" />

                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>